--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.5",
+    "nodemailer": "^6.10.1",
     "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
