--- a/.env.development
+++ b/.env.development
@@ -10,3 +10,7 @@ DB_USER=root
 DB_PASSWORD=1234
 DB_DATABASE=mobiles
 DB_PORT=3306
+
+# EMAIL
+EMAIL_SENDER=darlinlvaldez@gmail.com
+EMAIL_PASSWORD="stkj cxpx vveb mcon"
