--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
@@ -23,8 +22,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "nodemon": "^3.1.7",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.16"
+    "postcss": "^8.4.49"
   },
   "keywords": [],
   "description": ""
