--- a/.env.development
+++ b/.env.development
@@ -14,3 +14,6 @@ DB_PORT=3306
 # EMAIL
 EMAIL_SENDER=darlinlvaldez@gmail.com
 EMAIL_PASSWORD="stkj cxpx vveb mcon"
+
+# SESSION KEY
+SESSION_SECRET="super secret"
