--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-fileupload": "^1.5.1",
+    "express-mysql-session": "^3.0.3",
+    "express-session": "^1.18.1",
     "mysql2": "^3.11.5",
     "nodemailer": "^6.10.1",
     "uuid": "^11.1.0",
