--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "dotenv": "^16.5.0",
+    "dotenv-extended": "^2.9.0",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-fileupload": "^1.5.1",
