Paypal y carrusel listos

--- a/.env.development
+++ b/.env.development
@@ -17,3 +17,8 @@ EMAIL_PASSWORD="stkj cxpx vveb mcon"
 
 # SESSION KEY
 SESSION_SECRET="super secret"
+
+# PAYPAL (SANDBOX)
+CLIENT_ID=Adxx8fzjTmAkgRKTLil8ciSgRYaYZxTnJf96IAsdJVAvE8-fW3Rx2hbrDZ5VC662O1So9fgvFOPZd5IG
+CLIENT_SECRET=EHrEduR4QuxtxX5-ftZAl3ZxdpZ6uuPfn809_yBjxdZctfjpTrNZzbMBrt0eopt20DZ87tyrtQ-vwNt8
+API_URL=https://api-m.sandbox.paypal.com
