Tamaño de imagenes y eliminar imagenes de MC

--- a/.env.development
+++ b/.env.development
@@ -8,7 +8,7 @@ PORTAL="http://localhost:3000"
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=1234
-DB_DATABASE=mobiles
+DB_DATABASE=lavegatech
 DB_PORT=3306
 
 # EMAIL
