--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.17.1",
+    "axios": "^1.12.2",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.5.0",
     "dotenv-extended": "^2.9.0",
@@ -19,6 +21,7 @@
     "express-session": "^1.18.1",
     "mysql2": "^3.11.5",
     "nodemailer": "^6.10.1",
+    "sharp": "^0.34.4",
     "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
