Api de tasa de intercambio

--- a/.env.development
+++ b/.env.development
@@ -22,3 +22,6 @@ SESSION_SECRET="super secret"
 CLIENT_ID=Adxx8fzjTmAkgRKTLil8ciSgRYaYZxTnJf96IAsdJVAvE8-fW3Rx2hbrDZ5VC662O1So9fgvFOPZd5IG
 CLIENT_SECRET=EHrEduR4QuxtxX5-ftZAl3ZxdpZ6uuPfn809_yBjxdZctfjpTrNZzbMBrt0eopt20DZ87tyrtQ-vwNt8
 API_URL=https://api-m.sandbox.paypal.com
+
+# EXCHANGE
+EXCHANGE=321cf216589bdcad41e47e0af3b356ee
