--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^6.17.1",
     "axios": "^1.12.2",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.5.0",
@@ -20,6 +19,7 @@
     "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.1",
     "mysql2": "^3.11.5",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.1",
     "sharp": "^0.34.4",
     "uuid": "^11.1.0",
