--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.5.0",
     "dotenv-extended": "^2.9.0",
     "ejs": "^3.1.10",
+    "exceljs": "^4.4.0",
     "express": "^4.21.2",
     "express-fileupload": "^1.5.1",
     "express-mysql-session": "^3.0.3",
